--- a/bootstrapPractice.html
+++ b/bootstrapPractice.html
@@ -12,8 +12,10 @@
 </head>
 
 <body>
-  <headre class="container-fluid align-content-center">
-    <div class="row m-0 px-5">
+
+
+  <header class="container-fluid align-content-center">
+    <div class="row m-0 px-1 py-2 mt-2">
       <div class="col-3 p-0">
         <div class="container m-0 p-0 d-flex align-items-center gap-4">
           <a class="navbar-brand" href="#">
@@ -75,7 +77,7 @@
         </div>
       </div>
       <div class="col-9 p-0 d-flex justify-content-end gap-3">
-        <div class="bell text-center   d-flex align-items-center justify-content-center position-relative">
+        <div class="bell text-center   d-flex align-items-center justify-content-center">
           <i class="bi bi-bell fs-5"></i>
           <!-- <i class="bi bi-dot text-success fs-1 position-absolute top-0 and-0" ></i> -->
         </div>
@@ -83,100 +85,121 @@
           <img src="asset/avatar-1.jpg" class="rounded-circle position-relative" alt="avatar-1" width="50" height="50">
           <!-- <i class="bi bi-dot text-success fs-1 position-absolute border-primary" ></i> -->
         </div>
-        
-          <nav class="navbar bg-body-tertiary d-sm-block d-md-none ">
-            <div class="container p-0">
 
-              <button class="navbar-toggler p-1" type="button" data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-                aria-labelledby="offcanvasNavbarLabel">
-                <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                    <a class="navbar-brand" href="#">
-                      <img src="asset/logo.svg" alt="logo" width="40" height="40">
+        <nav class="navbar bg-body-tertiary d-sm-block d-md-none ">
+          <div class="container p-0">
+
+            <button class="navbar-toggler p-1" type="button" data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+              aria-labelledby="offcanvasNavbarLabel">
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+                  <a class="navbar-brand" href="#">
+                    <img src="asset/logo.svg" alt="logo" width="40" height="40">
+                  </a>
+                </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                      aria-expanded="false">
+                      Browse <i class="bi bi-chevron-down"></i>
                     </a>
-                  </h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
 
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Browse <i class="bi bi-chevron-down"></i>
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                          <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      </ul>
-                    </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                      aria-expanded="false">
+                      Landings <i class="bi bi-chevron-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
 
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Landings <i class="bi bi-chevron-down"></i>
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                          <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      </ul>
-                    </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                      aria-expanded="false">
+                      Page <i class="bi bi-chevron-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
 
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Page <i class="bi bi-chevron-down"></i>
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                          <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      </ul>
-                    </li>
-
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Account <i class="bi bi-chevron-down"></i>
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                          <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-
-                  </form>
-                </div>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                      aria-expanded="false">
+                      Account <i class="bi bi-chevron-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                </form>
               </div>
             </div>
-          </nav>
+          </div>
+        </nav>
+  </header>
 
+  <section id="one" class="container-max-width">
+    <div class="container">
+    <div class="row  m-0 p-0 align-items-center">
+      <div class="col-sm-12 mt-5 col-lg-6">
+        <h1 class="text-white"><strong>Welcome Web Students!</strong></h1>
+        <h4 class="text-white-50">Hand-picked Instructor and expertly crafted curses, designed for the modern students
+          and entreneur.</h4>
+          <div class="cotainer mt-4">
+            <a href="#">
+              <button type="button" class="btn btn-light px-3 py-3 btn-brrowseCurses text-white"><b>Browser Curses</b></button>
+            </a>
+            <a href="#">
+              <button type="button" class="btn btn-light px-3 py-3"><b>Are You Instructor?</b></button>
+            </a>
+          </div>
 
+      </div>
 
+      <div class="col-sm-12 col-lg-6">
+        <img src="asset/hero-img.png" class="img-fluid mt-5" alt="hero-img">
+      </div>
+    </div>
+  </div>
+  </section>
 
-  </headre>
 
 
 
