fixed data empty review

--- a/bootstrapPractice.html
+++ b/bootstrapPractice.html
@@ -264,7 +264,106 @@
         <div class="carousel-item active">
 
           <div class="row">
+            <!-----------  card 1----------------------------------->
             <div class="col-3">
+              <div class="card" style="width: 18rem;">
+                <img src="asset/course-graphql.jpg" class="card-img-top" alt="...">
+                <div class="card-body p-0">
+                  <div class="container mt-3">
+                    <h6 class="card-title fs-5 fw-medium ">GraphQL: introduction to graphQL for beginners</h6>
+                    <div class="row mt-4">
+                      <div class="col-5">
+                        <i class="bi bi-clock me-1"></i> <span>2h 40m</span>
+                      </div>
+                      <div class="col-7">
+                        <i class="bi bi-reception-4 me-1"></i> <span>Advance</span>
+                      </div>
+                    </div>
+                    <div class="container p-0 m-0 mt-3 review">
+                      <i class="bi bi-star-fill"></i>
+                      <i class="bi bi-star-fill"></i>
+                      <i class="bi bi-star-half"></i>
+                      <i class="bi bi-star"></i>
+                      <i class="bi bi-star"></i>
+                      <span class="review">2.5</span>
+                      <span class="text-secondary fs-7 ms-2"><small>(1,500)</small></span>
+                    </div>
+                    <div class="container p-0 m-0 mt-3 mb-4 ">
+                      <h6><b>$500</b>&nbsp;&nbsp;<span class="text-secondary text-decoration-line-through">$600</span>
+                      </h6>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-3 p-0 m-0">
+                        <div class="profile text-center">
+                          <img src="asset/avatar-5.jpg" class="rounded-circle position-relative" alt="avatar-5"
+                            width="30" height="30">
+                        </div>
+                      </div>
+                      <div class="col-7 p-0 m-0">
+                        <p>Brooklyn Simmons</p>
+                      </div>
+                      <div class="col-2 p-0 ">
+                        <i class="bi bi-bookmark"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+             <!-----------  card 2----------------------------------->
+             <div class="col-3">
+              <div class="card" style="width: 18rem;">
+                <img src="asset/course-javascript.jpg" class="card-img-top" alt="...">
+                <div class="card-body p-0">
+                  <div class="container mt-3">
+                    <h6 class="card-title fs-5 fw-medium ">A Complete beginner's Guide to JavaScript</h6>
+                    <div class="row mt-4">
+                      <div class="col-5">
+                        <i class="bi bi-clock me-1"></i> <span>4h 10m</span>
+                      </div>
+                      <div class="col-7">
+                        <i class="bi bi-reception-4 me-1"></i> <span>Advance</span>
+                      </div>
+                    </div>
+                    <div class="container p-0 m-0 mt-3">
+                      <i class="bi bi-star-fill"></i>
+                      <i class="bi bi-star-fill"></i>
+                      <i class="bi bi-star-half"></i>
+                      <i class="bi bi-star"></i>
+                      <i class="bi bi-star"></i>
+                      <span class="review">2.5</span>
+                      <span class="text-secondary fs-7 ms-2"><small>(1,500)</small></span>
+                    </div>
+                    <div class="container p-0 m-0 mt-3 mb-4 ">
+                      <h6><b>$500</b>&nbsp;&nbsp;<span class="text-secondary text-decoration-line-through">$600</span>
+                      </h6>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-3 p-0 m-0">
+                        <div class="profile text-center">
+                          <img src="asset/avatar-5.jpg" class="rounded-circle position-relative" alt="avatar-5"
+                            width="30" height="30">
+                        </div>
+                      </div>
+                      <div class="col-7 p-0 m-0">
+                        <p>Brooklyn Simmons</p>
+                      </div>
+                      <div class="col-2 p-0 ">
+                        <i class="bi bi-bookmark"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+             <!-----------  card 3----------------------------------->
+             <div class="col-3">
               <div class="card" style="width: 18rem;">
                 <img src="asset/course-graphql.jpg" class="card-img-top" alt="...">
                 <div class="card-body p-0">
@@ -284,6 +383,8 @@
                       <i class="bi bi-star-half"></i>
                       <i class="bi bi-star"></i>
                       <i class="bi bi-star"></i>
+                      <span class="review">2.5</span>
+                      <span class="text-secondary fs-7 ms-2"><small>(1,500)</small></span>
                     </div>
                     <div class="container p-0 m-0 mt-3 mb-4 ">
                       <h6><b>$500</b>&nbsp;&nbsp;<span class="text-secondary text-decoration-line-through">$600</span>
@@ -295,7 +396,8 @@
                     <div class="row">
                       <div class="col-3 p-0 m-0">
                         <div class="profile text-center">
-                          <img src="asset/avatar-5.jpg" class="rounded-circle position-relative" alt="avatar-5" width="30" height="30">
+                          <img src="asset/avatar-5.jpg" class="rounded-circle position-relative" alt="avatar-5"
+                            width="30" height="30">
                         </div>
                       </div>
                       <div class="col-7 p-0 m-0">
@@ -306,43 +408,58 @@
                       </div>
                     </div>
                   </div>
-
                 </div>
               </div>
             </div>
-            <div class="col-3">
+             <!-----------  card 4----------------------------------->
+             <div class="col-3">
               <div class="card" style="width: 18rem;">
-                <img src="asset/course-javascript.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                <img src="asset/course-graphql.jpg" class="card-img-top" alt="...">
+                <div class="card-body p-0">
+                  <div class="container mt-3">
+                    <h6 class="card-title fs-5 fw-medium ">GraphQL: introduction to graphQL for beginners</h6>
+                    <div class="row mt-4">
+                      <div class="col-5">
+                        <i class="bi bi-clock me-1"></i> <span>2h 40m</span>
+                      </div>
+                      <div class="col-7">
+                        <i class="bi bi-reception-4 me-1"></i> <span>Advance</span>
+                      </div>
+                    </div>
+                    <div class="container p-0 m-0 mt-3">
+                      <i class="bi bi-star-fill"></i>
+                      <i class="bi bi-star-fill"></i>
+                      <i class="bi bi-star-half"></i>
+                      <i class="bi bi-star"></i>
+                      <i class="bi bi-star"></i>
+                      <span class="review">2.5</span>
+                      <span class="text-secondary fs-7 ms-2"><small>(1,500)</small></span>
+                    </div>
+                    <div class="container p-0 m-0 mt-3 mb-4 ">
+                      <h6><b>$500</b>&nbsp;&nbsp;<span class="text-secondary text-decoration-line-through">$600</span>
+                      </h6>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-3 p-0 m-0">
+                        <div class="profile text-center">
+                          <img src="asset/avatar-5.jpg" class="rounded-circle position-relative" alt="avatar-5"
+                            width="30" height="30">
+                        </div>
+                      </div>
+                      <div class="col-7 p-0 m-0">
+                        <p>Brooklyn Simmons</p>
+                      </div>
+                      <div class="col-2 p-0 ">
+                        <i class="bi bi-bookmark"></i>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-3">
-              <div class="card" style="width: 18rem;">
-                <img src="asset/course-node.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card" style="width: 18rem;">
-                <img src="asset/course-laravel.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
+            </div> 
           </div>
         </div>
 
