first 4 card dek view ready

--- a/bootstrapPractice.html
+++ b/bootstrapPractice.html
@@ -256,6 +256,10 @@
       </div>
     </div>
   </section>
+  <div class="container mt-5 mb-5">
+    <h3>Racommended to you</h3>
+  </div>
+ 
 
   <section id="three"></section>
   <div class="container">
@@ -269,7 +273,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="asset/course-graphql.jpg" class="card-img-top" alt="...">
                 <div class="card-body p-0">
-                  <div class="container mt-3">
+                  <div class="container mt-4 px-3">
                     <h6 class="card-title fs-5 fw-medium ">GraphQL: introduction to graphQL for beginners</h6>
                     <div class="row mt-4">
                       <div class="col-5">
@@ -294,7 +298,7 @@
                     </div>
                   </div>
                   <hr>
-                  <div class="container">
+                  <div class="container p-0">
                     <div class="row">
                       <div class="col-3 p-0 m-0">
                         <div class="profile text-center">
@@ -318,7 +322,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="asset/course-javascript.jpg" class="card-img-top" alt="...">
                 <div class="card-body p-0">
-                  <div class="container mt-3">
+                  <div class="container mt-4 px-3">
                     <h6 class="card-title fs-5 fw-medium ">A Complete beginner's Guide to JavaScript</h6>
                     <div class="row mt-4">
                       <div class="col-5">
@@ -331,14 +335,14 @@
                     <div class="container p-0 m-0 mt-3">
                       <i class="bi bi-star-fill"></i>
                       <i class="bi bi-star-fill"></i>
+                      <i class="bi bi-star-fill"></i>
                       <i class="bi bi-star-half"></i>
                       <i class="bi bi-star"></i>
-                      <i class="bi bi-star"></i>
-                      <span class="review">2.5</span>
-                      <span class="text-secondary fs-7 ms-2"><small>(1,500)</small></span>
+                      <span class="review">3.5</span>
+                      <span class="text-secondary fs-7 ms-2"><small>(7,500)</small></span>
                     </div>
                     <div class="container p-0 m-0 mt-3 mb-4 ">
-                      <h6><b>$500</b>&nbsp;&nbsp;<span class="text-secondary text-decoration-line-through">$600</span>
+                      <h6><b>$700</b>&nbsp;&nbsp;<span class="text-secondary text-decoration-line-through">$850</span>
                       </h6>
                     </div>
                   </div>
@@ -347,12 +351,12 @@
                     <div class="row">
                       <div class="col-3 p-0 m-0">
                         <div class="profile text-center">
-                          <img src="asset/avatar-5.jpg" class="rounded-circle position-relative" alt="avatar-5"
+                          <img src="asset/avatar-1.jpg" class="rounded-circle position-relative" alt="avatar-1"
                             width="30" height="30">
                         </div>
                       </div>
                       <div class="col-7 p-0 m-0">
-                        <p>Brooklyn Simmons</p>
+                        <p>Jenny Wilson</p>
                       </div>
                       <div class="col-2 p-0 ">
                         <i class="bi bi-bookmark"></i>
@@ -365,29 +369,29 @@
              <!-----------  card 3----------------------------------->
              <div class="col-3">
               <div class="card" style="width: 18rem;">
-                <img src="asset/course-graphql.jpg" class="card-img-top" alt="...">
+                <img src="asset/course-node.jpg" class="card-img-top" alt="...">
                 <div class="card-body p-0">
-                  <div class="container mt-3">
-                    <h6 class="card-title fs-5 fw-medium ">GraphQL: introduction to graphQL for beginners</h6>
+                  <div class="container mt-4 px-3">
+                    <h6 class="card-title fs-5 fw-medium ">Beginning Node.Js, Express & MongoDB Development</h6>
                     <div class="row mt-4">
                       <div class="col-5">
-                        <i class="bi bi-clock me-1"></i> <span>2h 40m</span>
+                        <i class="bi bi-clock me-1"></i> <span>2h 00m</span>
                       </div>
                       <div class="col-7">
-                        <i class="bi bi-reception-4 me-1"></i> <span>Advance</span>
+                        <i class="bi bi-reception-3 me-1"></i> <span>Intermedie</span>
                       </div>
                     </div>
                     <div class="container p-0 m-0 mt-3">
                       <i class="bi bi-star-fill"></i>
                       <i class="bi bi-star-fill"></i>
+                      <i class="bi bi-star-fill"></i>
+                      <i class="bi bi-star-fill"></i>
                       <i class="bi bi-star-half"></i>
-                      <i class="bi bi-star"></i>
-                      <i class="bi bi-star"></i>
-                      <span class="review">2.5</span>
-                      <span class="text-secondary fs-7 ms-2"><small>(1,500)</small></span>
+                      <span class="review">4.0</span>
+                      <span class="text-secondary fs-7 ms-2"><small>(15,700)</small></span>
                     </div>
                     <div class="container p-0 m-0 mt-3 mb-4 ">
-                      <h6><b>$500</b>&nbsp;&nbsp;<span class="text-secondary text-decoration-line-through">$600</span>
+                      <h6><b>$800</b>&nbsp;&nbsp;<span class="text-secondary text-decoration-line-through">$950</span>
                       </h6>
                     </div>
                   </div>
@@ -396,12 +400,12 @@
                     <div class="row">
                       <div class="col-3 p-0 m-0">
                         <div class="profile text-center">
-                          <img src="asset/avatar-5.jpg" class="rounded-circle position-relative" alt="avatar-5"
+                          <img src="asset/avatar-3.jpg" class="rounded-circle position-relative" alt="avatar-3"
                             width="30" height="30">
                         </div>
                       </div>
                       <div class="col-7 p-0 m-0">
-                        <p>Brooklyn Simmons</p>
+                        <p>Sina ray</p>
                       </div>
                       <div class="col-2 p-0 ">
                         <i class="bi bi-bookmark"></i>
@@ -414,43 +418,43 @@
              <!-----------  card 4----------------------------------->
              <div class="col-3">
               <div class="card" style="width: 18rem;">
-                <img src="asset/course-graphql.jpg" class="card-img-top" alt="...">
+                <img src="asset/course-laravel.jpg" class="card-img-top" alt="...">
                 <div class="card-body p-0">
-                  <div class="container mt-3">
-                    <h6 class="card-title fs-5 fw-medium ">GraphQL: introduction to graphQL for beginners</h6>
+                  <div class="container mt-4 px-3">
+                    <h6 class="card-title fs-5 fw-medium ">Laravel: The Ultimate Beginner's Guide to Laravel</h6>
                     <div class="row mt-4">
                       <div class="col-5">
-                        <i class="bi bi-clock me-1"></i> <span>2h 40m</span>
+                        <i class="bi bi-clock me-1"></i> <span>1h 00m</span>
                       </div>
                       <div class="col-7">
-                        <i class="bi bi-reception-4 me-1"></i> <span>Advance</span>
+                        <i class="bi bi-reception-1 me-1"></i> <span>Advance</span>
                       </div>
                     </div>
                     <div class="container p-0 m-0 mt-3">
                       <i class="bi bi-star-fill"></i>
                       <i class="bi bi-star-fill"></i>
+                      <i class="bi bi-star-fill"></i>
+                      <i class="bi bi-star-fill"></i>
                       <i class="bi bi-star-half"></i>
-                      <i class="bi bi-star"></i>
-                      <i class="bi bi-star"></i>
                       <span class="review">2.5</span>
-                      <span class="text-secondary fs-7 ms-2"><small>(1,500)</small></span>
+                      <span class="text-secondary fs-7 ms-2"><small>(2,500)</small></span>
                     </div>
                     <div class="container p-0 m-0 mt-3 mb-4 ">
-                      <h6><b>$500</b>&nbsp;&nbsp;<span class="text-secondary text-decoration-line-through">$600</span>
+                      <h6><b>$170</b>&nbsp;&nbsp;<span class="text-secondary text-decoration-line-through">$220</span>
                       </h6>
                     </div>
                   </div>
                   <hr>
-                  <div class="container">
-                    <div class="row">
+                  <div class="container ">
+                    <div class="row p-0 m-0">
                       <div class="col-3 p-0 m-0">
                         <div class="profile text-center">
-                          <img src="asset/avatar-5.jpg" class="rounded-circle position-relative" alt="avatar-5"
+                          <img src="asset/avatar-7.jpg" class="rounded-circle position-relative" alt="avatar-7"
                             width="30" height="30">
                         </div>
                       </div>
                       <div class="col-7 p-0 m-0">
-                        <p>Brooklyn Simmons</p>
+                        <p>Sobo Rikhan</p>
                       </div>
                       <div class="col-2 p-0 ">
                         <i class="bi bi-bookmark"></i>
@@ -465,12 +469,10 @@
 
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+        <i class="bi bi-chevron-left fs-2"></i>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
+        <i class="bi bi-chevron-right fs-2"></i>
       </button>
     </div>
   </div>
